--- a/index.html
+++ b/index.html
@@ -6,12 +6,36 @@
     <h1>Hilal Karakurt</h1>
         <h2>Hakkımda</h2>
         <p>
-            Hilal Karakurt Erciyes Üniversitesi Biyomedikal Mühendisliği bölümü mezunuyum. Yazılımla uğraşmayı çok seviyorum. Sınıflandırma ve Regresyon problemleriyle uğraştım. Şimdi ise sıra Backend öğrenmede.
+            Hilal Karakurt Erciyes Üniversitesi Biyomedikal Mühendisliği bölümü mezunuyum. Yazılımla uğraşmayı çok seviyorum. Daha önce Sınıflandırma ve Regresyon problemleriyle uğraştım. Şimdi ise sıra Backend öğrenmede.
         </p>
-        <h2>Sevdiğim Diziler</h2>
+        <h2>İlgi Alanlarım</h2>
         <ul>
-            <li> 12 Monkeys </li>
-            <li> Brooklyn Nine-Nine </li>
-            <li> Friends </li>
+            <li>Film
+                <ul>
+                    <li> <a href="https://www.imdb.com/title/tt1655441/">The Age of adaline</a> </li>
+                    <li><a href="https://www.imdb.com/title/tt0250223/?ref_=fn_al_tt_1">Asteriks ve Oburiks: Görevimiz Kleopatra</a></li>
+                    <li><a href="https://www.imdb.com/title/tt2293640/?ref_=fn_al_tt_1">Minions</a></li>
+            </ul></li>
+            <li>Dizi 
+                <ul>
+                    <li>12 Monkeys</li>
+                    <li>Brooklyn Nine-Nine</li>
+                    <li>Friends</li>
+            </ul></li>
+            <li> Kitap
+                <ul>
+                    <li><a href="https://www.goodreads.com/book/show/125743961-vadideki-zambak?from_search=true&from_srp=true&qid=clywvqLEcK&rank=1">Vadideki Zambak</a></li>
+                    <li>Hayvan Çiftliği</li>
+                    <li><a href="https://www.goodreads.com/book/show/52866385-su-ve-ceza?from_search=true&from_srp=true&qid=bLTkGPgxtD&rank=1"> Suç ve Ceza</a></li>
+            </ul></li>
         </ul>
+        <div>
+            <h2>Sevdiğim Diziler</h2>
+            <ul>
+                <li> 12 Monkeys </li>
+                <li> Brooklyn Nine-Nine </li>
+                <li> Friends </li>
+            </ul>
+        </div>
+        
 </body>
